# uvxytdlp

./: .gitignore  .prettierrc  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  start-services.sh  todo.md  tsconfig.app.json  vite.config.ts
.github/workflows/: docker-image.yml
apiflask/: .gitignore  app.py  config.toml  config.toml.example  docker.config.toml  last_uvx_refresh.txt  last_ytdlprefresh.txt  requirements.txt
apiserver/: .gitignore  app.py  app_test.py  app_ytdlp_live_test.py  config.yaml  config.yaml.example  docker.config.yaml  lighttpd.conf  pyproject.toml  pytest.ini  requirements.txt  start.sh
src/: App.tsx  app.tsx  gradient-bg.scss  gradient-bg.ts  index.css
src/components/: about-uvxytdlp.tsx  audio-player.tsx  backend-connection-failed.tsx  bookmarklet-generator.tsx  bookmarklet-http-warning.mdx  bookmarklet-settings-card.tsx  bookmarklet-settings-view.tsx  bookmarklet-view.tsx  bookmarklet.tsx  connecting-status-display.tsx  cookies-settings-view.tsx  custom-audio-component.tsx  downloaded-file.tsx  downloaded-ui.tsx  downloader-input.tsx  downloader-ui.tsx  general-settings-card.tsx  general-settings-view.tsx  heading.tsx  icon.tsx  indeterminate-progress.tsx  long-press-button.tsx  ocodo-loader-icon.tsx  settings-dialog.tsx  settings-tabs.tsx  settings-view.tsx  status-display.tsx  theme-provider.tsx  toggle-state-button.tsx  url-input-card.tsx  uvxytdlp-icon.tsx  video-player.tsx  youtube-search-result-box.tsx  youtube-search-result-row.tsx  youtube-search-ui.tsx
src/contexts/: api-base-context-provider.tsx  (+20 more)
(+61 files in other folders)
